# docs/swagger.json
@@ -189,6 +189,26 @@
                 "summary": "Callback для виджета Telegram",
                 "responses": {}
             }
+        },
+        "/auth/telegram/login": {
+            "get": {
+                "description": "Возвращает HTML-страницу с Telegram Login Widget для авторизации пользователя через Telegram",
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Вход через Telegram",
+                "responses": {
+                    "200": {
+                        "description": "HTML page with Telegram login widget",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -209,12 +229,6 @@
                 },
                 "nickname": {
                     "type": "string"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/domain.Tag"
-                    }
                 },
                 "updated_at": {
                     "type": "string"
@@ -284,6 +298,12 @@
                 },
                 "status": {
                     "$ref": "#/definitions/domain.UserStatus"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Tag"
+                    }
                 },
                 "updated_at": {
                     "type": "string"
